Simple fixes